Refactoring: deprecated APIs entfernen, JPA @Temporal auf Instant migrieren
- appNG-interne deprecated Klassen entfernt: DefaultPasswordPolicy, Sha1PasswordHandler
- Deprecated Methoden entfernt: Environment.init(5-param), RequestUtil.getSiteName/getHostIdentifier,
  PasswordPolicy.isValidPassword/getErrorMessageKey, CoreService.getPasswordHandler,
  DefaultEnvironment.init(5-param), HeartBeat.PlatformEnv.init
- MockitoAnnotations.initMocks -> openMocks, Class.newInstance -> getDeclaredConstructor().newInstance()
- StringUtils.deprecated-Methoden durch Standard-Methoden ersetzt
- @Temporal(TIMESTAMP) auf java.time.Instant migriert (alle Domain-Entitäten und Interfaces)
- Versionable<Date> -> Versionable<Instant> in Auditable, Identifier, Repository
- PropertyImpl: @Column(name="mandatory") auf isMandatory() ergänzt (JPA property-access Fix)
- BCrypt-Testdaten in AppNGTestDataProvider (SHA1 durch BCrypt ersetzt)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>