@@ -42,7 +42,6 @@ import org.appng.core.domain.SiteImpl;
 import org.appng.core.repository.config.DataSourceFactory;
 import org.appng.core.repository.config.HikariCPConfigurer;
 import org.appng.core.security.ConfigurablePasswordPolicy;
-import org.appng.core.security.DefaultPasswordPolicy;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -225,7 +224,7 @@ public class PropertySupport {
 				ConfigurablePasswordPolicy.class.getName());
 		PasswordPolicy passwordPolicy = null;
 		try {
-			passwordPolicy = (PasswordPolicy) getClass().getClassLoader().loadClass(passwordPolicyClass).newInstance();
+			passwordPolicy = (PasswordPolicy) getClass().getClassLoader().loadClass(passwordPolicyClass).getDeclaredConstructor().newInstance();
 		} catch (ReflectiveOperationException e) {
 			LOGGER.error("error while instantiating " + passwordPolicyClass, e);
 			passwordPolicy = new ConfigurablePasswordPolicy();
@@ -388,8 +387,8 @@ public class PropertySupport {
 		addPlatformProperty(defaultOverrides, Platform.Property.MONITOR_PERFORMANCE, false);
 		addPlatformProperty(defaultOverrides, Platform.Property.MONITORING_PATH, "/health");
 		addPlatformProperty(defaultOverrides, Platform.Property.PASSWORD_POLICY_ERROR_MSSG_KEY,
-				DefaultPasswordPolicy.ERROR_MSSG_KEY);
-		addPlatformProperty(defaultOverrides, Platform.Property.PASSWORD_POLICY_REGEX, DefaultPasswordPolicy.REGEX);
+				"DefaultPasswordPolicy.errorMessage");
+		addPlatformProperty(defaultOverrides, Platform.Property.PASSWORD_POLICY_REGEX, "[\\S]{6,64}");
 		addPlatformProperty(defaultOverrides, Platform.Property.PLATFORM_CACHE_FOLDER, "platform");
 		addPlatformProperty(defaultOverrides, Platform.Property.APPLICATION_DIR, "/applications");
 		addPlatformProperty(defaultOverrides, Platform.Property.REPOSITORY_PATH, "repository");
